--- a/helloworld.html
+++ b/helloworld.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 hello world this is charlie zhu
-Do you want to view <a href="anewpage.html">another page</a> ?
+Do you want to view <a href="newpage.html">another page</a> ?
 </body>
 </html>
